--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
       <nav class="navbar">
          <div class="heading-section">
-            <h3>tic-tac-toe</h3>
+            <h3>Tic-Tac-Toe</h3>
          </div>
          <div class="icon-section">
            <h3 id="mode">
@@ -59,10 +59,10 @@
                </div>
                <div class = " msg-container hide">
                   <p id="winnercandidate"></p>
-                   <button id="newgame">newgame</button>
+                   <button id="newgame">New Game</button>
                </div>
                 <div class="resetbtn">
-                  <button id="reset">resetGame</button>
+                  <button id="reset">Reset Game</button>
                 </div>
            </div>
        </div>
